#  SPDX-License-Identifier: GPL-2.0
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-blackout"
version = "0.0.1"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
description = "Turn off the LEDs of supported devices, and wait for the Eruption daemon to take over from userspace"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "linux", "kernel", "module"]
categories = ["hardware-support"]

[dependencies]
bitflags = "2.1.0"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"
shlex = "1.1.0"
