#  SPDX-License-Identifier: LGPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eruption-sdk"
version = "0.0.10"
authors = [
  { name="X3n0m0rph59", email="x3n0m0rph59@gmail.com" },
]
description = "Provides an interface to the Eruption Realtime RGB LED Driver for Linux"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Intended Audience :: Developers",
]
keywords = ["eruption", "linux", "led", "driver", "sdk"]
dependencies = [
    "protobuf <= 3.20",
]

[project.urls]
"Homepage" = "https://github.com/X3n0m0rph59/eruption"
"Bug Tracker" = "https://github.com/X3n0m0rph59/eruption/issues"
