#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "simple"
version = "0.0.1"
edition = "2021"


[dependencies]
cfg-if = "1.0.0"
log = "0.4.16"
thiserror = "1.0.30"
eyre = "0.6.8"
color-eyre = "0.6.1"
clap = "3.1.12"
lazy_static = "1.4.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
rust-embed = "6.4.0"
unic-langid = "0.9.0"
icecream = "0.1.0"
eruption-rs = { path = "../../../lib/rust/eruption-rs" }
