#    SPDX-License-Identifier: LGPL-3.0-or-later
#
#    This file is part of the Eruption SDK.
#
#    The Eruption SDK is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Lesser General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    The Eruption SDK is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Lesser General Public License for more details.
#
#    You should have received a copy of the GNU Lesser General Public License
#    along with the Eruption SDK.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-sdk"
version = "0.0.5"
build = "build.rs"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>", "The Eruption Development Team"]
edition = "2021"
description = "Provides an interface to the Eruption Realtime RGB LED Driver for Linux"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "sdk"]
categories = ["hardware-support"]
license = "LGPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
libc = "0.2.142"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = "1.0.160"
bincode = "2.0.0-rc.3"
bytes = "1.4.0"
prost = "0.11.9"
prost-types = "0.11.9"
socket2 = { version = "0.5.2", features = ["all"] }

[build-dependencies]
prost-build = "0.11.9"
