#  SPDX-License-Identifier: LGPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-sdk"
version = "0.0.11"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.65"
description = "Provides an interface to the Eruption Realtime RGB LED Driver for Linux"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "sdk"]
categories = ["hardware-support"]
license = "LGPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
libc = "0.2.148"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = "1.0.188"
bincode = "2.0.0-rc.3"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
socket2 = { version = "0.5.4", features = ["all"] }

[build-dependencies]
prost-build = "0.12.1"
