#  SPDX-License-Identifier: LGPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "liberuption"
version = "0.0.2"
build = "build.rs"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>", "The Eruption Development Team"]
edition = "2021"
rust-version = "1.65"
description = "Provides an interface to the Eruption Realtime RGB LED Driver for Linux"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "sdk"]
categories = ["hardware-support"]
license = "LGPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[lib]
name = "eruption"
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.38"
eyre = "0.6.8"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
# i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
# rust-embed = "6.2.0"
# unic-langid = "0.9.0"
eruption-sdk = { path = "../../../lib/rust/eruption-rs" }
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
thiserror = "1.0.38"

[build-dependencies]
cbindgen = "0.24.3"
prost-build = "0.11.5"
